[tool.poetry]
name = "genetic-ibis"
version = "0.1.4"
description = "Genetic Circuit Scoring Algorithms"
authors = ["W.R. Jackson, Ben Bremer, Eric South"]
license = "MIT"
packages = [
    { include="ibis", from="." },
]


[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
scipy = "^1.6.0"
pytest = "^6.2.2"
rich = "^9.11.0"
click = "^7.1.2"
typer = "^0.3.2"
black = "^20.8b1"
networkx = "^2.5"
pandas = "^1.2.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
